k8s/message-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: message-namespace
spec:                                  
  selector:
    svc: message
  ports:
    - protocol: TCP
      port: 80             # Public-facing port/Service port
      targetPort: 8080       # Container port
      nodePort: 30085
  type: NodePort            # Exposes the service
